--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,8 @@
 <nav>
+    <button class="dark-mode-toggle">🌞</button>
     <ul>
       <li><a href="/">Hjem</a></li>
       <li><a href="/om/">Om meg</a></li>
-      <li><a href="/posts/">Blog</a></li>
+      <li><a href="/posts/">Blogg</a></li>
     </ul>
 </nav>
