--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,35 +1,49 @@
+// Variables for Light and Dark Modes
+$light-background: #ffffff;
+$dark-background: #000000;
+$light-text: #000000;
+$dark-text: #ffffff;
+
 body {
-    width: 400px;
-    margin: 0 auto;
-    font-family: sans-serif;
+  width: 600px;
+  margin: 0 auto;
+  font-family: sans-serif;
+  background-color: $light-background;
+  color: $light-text;
+  transition: background-color 0.3s, color 0.3s;
+
+  // Dark Mode Styles
+  &.dark-mode {
+    background-color: $dark-background;
+    color: $dark-text;
   }
-  
-  nav ul {
-    list-style: none;
-    padding: 3px 5px;
-    background: #111;
-  
-    a {
-      color: #fff;
-      text-decoration: none;
-  
-      &:hover {
-        text-decoration: underline;
-      }
+}
+
+nav ul {
+  list-style: none;
+  padding: 10px 15px;
+  a {
+    text-decoration: none;
+    color: inherit;
+    &:hover {
+      text-decoration: underline;
     }
-  
-    li {
-      display: inline;
-    }
   }
-  
-  footer {
-    background: #f2f2f2;
-    padding: 2px 2px;
-    font-size: .7em;
-    text-align: center;
-  }
-  
-  #map {
-    height: 300px;
-  }
+}
+
+footer {
+  padding: 10px;
+  text-align: center;
+}
+
+.dark-mode-toggle {
+    background-color: inherit;
+    border: none;
+    cursor: pointer;
+    padding: 10px 15px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
+    font-size: 1.2em;
+  }  
