La til CTF mappe, fikset nav-bar, rm dark mode

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,8 +1,9 @@
 <nav>
-    <button class="dark-mode-toggle">🌞</button>
+    <!--<button class="dark-mode-toggle">🌞</button>-->
     <ul>
       <li><a href="/">Hjem</a></li>
-      <li><a href="/om/">Om meg</a></li>
+      <li><a href="/projects/">Projects</a></li>
       <li><a href="/posts/">Blogg</a></li>
+      <li><a href="/ctf/">CTF</a></li>
     </ul>
 </nav>
