--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,3 @@
-// Variables for Light and Dark Modes
 $light-background: #ffffff;
 $dark-background: #000000;
 $light-text: #000000;
@@ -19,17 +18,21 @@ body {
   }
 }
 
-nav {    
+nav {
+    width: 100%;
+    padding: 1em;
     ul {
       list-style: none;
-      padding: 10px 15px;
+      padding: 0;
       margin: 0;
+      display: flex;
+      justify-content: space-between;
   
       li {
-        display: inline;
-        margin-right: 100px;
+        margin-right: 0;
   
         a {
+          padding: 10px 15px;
           text-decoration: none;
           color: inherit;
   
@@ -39,8 +42,7 @@ nav {
         }
       }
     }
-  }
-  
+  }  
 
 footer {
   padding: 10px;
