--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,9 +1,10 @@
 <nav>
+    <a class="home" href="/">Brage N. Reitan</a>
     <!--<button class="dark-mode-toggle">🌞</button>-->
     <ul>
-      <li><a href="/">Hjem</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="/projects/">Projects</a></li>
-      <li><a href="/posts/">Blogg</a></li>
+      <li><a href="/posts/">Blog</a></li>
       <li><a href="/ctf/">CTF</a></li>
     </ul>
 </nav>
