remove dark mode toggle

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,21 +1,10 @@
-$light-background: #ffffff;
-$dark-background: #000000;
-$light-text: #000000;
-$dark-text: #ffffff;
-
 body {
   width: 600px;
   margin: 0 auto;
   font-family: sans-serif;
-  background-color: $light-background;
-  color: $light-text;
+  background-color: #000000;
+  color: #ffffff;
   transition: background-color 0.3s, color 0.3s;
-
-  // Dark Mode Styles
-  &.dark-mode {
-    background-color: $dark-background;
-    color: $dark-text;
-  }
 }
 
 nav {
@@ -65,15 +54,3 @@ footer {
     display: flex;
     justify-content: left;
 }
-
-.dark-mode-toggle {
-    background-color: inherit;
-    border: none;
-    cursor: pointer;
-    padding: 10px 15px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 1000;
-    font-size: 1.2em;
-  }  
