--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,6 +7,26 @@ body {
   transition: background-color 0.3s, color 0.3s;
   text-align: center;
 }
+/* Unvisited link */
+a:link {
+  color: inherit;
+  text-decoration: none;
+}
+
+/* Visited link */
+a:visited {
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+
+/* Active link */
+a:active {
+  color: green;
+}
 
 nav {
     width: 100%;
@@ -59,3 +79,4 @@ footer {
 .content-ctf-il {
   text-align: left;
 }
+
