--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,15 +6,15 @@ body {
   color: #ffffff;
 }
 
-.custom-icon {
-  max-width: 1%;
+.icon-wrapper {
+  display: flex;
+  justify-content: center; /* Centers the items along the main axis */
+  flex-wrap: wrap; /* Allows items to wrap if needed */
+  max-width: 1%; /* Ensures the image is responsive and does not overflow */
+  height: auto; /* Maintains aspect ratio */
+  display: block; /* Makes the image a block-level element */
+  margin: 0 auto; /* Adds equal margin to left and right, centering the image */
 }
-
-
-/* img {
-  max-width: 10%;
-  justify-content: space-evenly;
-} */
 
 a:link {
   color: inherit;
