sosiale medier på index i html/css

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,9 +1,9 @@
 <nav>
-    <a class="home" href="/">Brage N. Reitan</a>
+    <a class="home" href="/">Brage Nesteby Reitan</a>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/projects/">Projects</a></li>
-      <li><a href="/posts/">Blog</a></li>
+      <li><a href="/projects/">Projekter</a></li>
+      <li><a href="/posts/">Blogg</a></li>
       <li><a href="/ctf/">CTF</a></li>
     </ul>
 </nav>
