--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,13 +7,21 @@ body {
 }
 
 .icon-wrapper {
+  padding: 3em;
   display: flex;
-  justify-content: center; /* Centers the items along the main axis */
-  flex-wrap: wrap; /* Allows items to wrap if needed */
-  max-width: 1%; /* Ensures the image is responsive and does not overflow */
-  height: auto; /* Maintains aspect ratio */
-  display: block; /* Makes the image a block-level element */
-  margin: 0 auto; /* Adds equal margin to left and right, centering the image */
+  justify-content: space-evenly;
+  margin: auto auto;
+  a {
+    img {
+      transition: transform 0.3s ease;
+      width: 75px;
+      height: 75px;
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
+  }
+
 }
 
 a:link {
