--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -24,6 +24,11 @@ body {
 
 }
 
+.thm-info{
+  display: flex;
+  justify-content: center;
+}
+
 a:link {
   color: inherit;
   text-decoration: none;
