Update styles for responsiveness

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,8 +1,8 @@
 <nav>
     <a class="home" href="/">Brage Nesteby Reitan</a>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/projects/">Projekter</a></li>
+      <li><a href="/">Hjem</a></li>
+      <li><a href="/projects/">Prosjekter</a></li>
       <li><a href="/posts/">Blogg</a></li>
       <li><a href="/ctf/">CTF</a></li>
     </ul>
