remove name in nav-bar

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -80,7 +80,7 @@ p {
   font-size: 1rem; 
 }
 
-.home {
+/* .home {
   padding: 1em 15px;
   text-decoration: none;
   color: inherit;
@@ -93,4 +93,4 @@ p {
   z-index: 1000;
   display: flex;
   justify-content: left;
-}
+} */
