--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,5 +1,5 @@
 <nav>
-    <a class="home" href="/">Brage Nesteby Reitan</a>
+<!--<a class="home" href="/">Brage Nesteby Reitan</a>-->    
     <ul>
       <li><a href="/">Hjem</a></li>
       <li><a href="/projects/">Prosjekter</a></li>
