Update website links and footer design

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,6 +2,6 @@
  <!-- No footer here! -->
 {{ else }}
 <footer>
-   Nettside under konstruksjon, designet med <a href="https://gohugo.io/">Hugo</a> av {{ .Site.Params.name }} i {{ now.Year }}
- </footer>
+   Designet med bruk av <a href="https://gohugo.io/">Hugo</a> av {{ .Site.Params.name }} i {{ now.Year }}
+</footer>
 {{ end }}
