--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -5,5 +5,6 @@
       <li><a href="/projects/">Prosjekter</a></li>
       <li><a href="/posts/">Blogg</a></li>
       <li><a href="/ctf/">CTF</a></li>
+  <!--<li><a href="/certifications/">Sertifikasjoner</a></li>-->    
     </ul>
 </nav>
