add website as a project

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,11 +1,11 @@
 body {
   width: 100%;
-  max-width: 600px; /* Maximum width for larger screens */
+  max-width: 600px;
   margin: 0 auto;
   font-family: sans-serif;
   background-color: #000000;
   color: #ffffff;
-  font-size: 16px; /* Base font size for desktop */
+  font-size: 16px;
 }
 
 .icon-wrapper {
