Update website title and hide footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,6 +2,6 @@
  <!-- No footer here! -->
 {{ else }}
 <footer>
-   Designet med bruk av <a href="https://gohugo.io/">Hugo</a> av {{ .Site.Params.name }} i {{ now.Year }}
+   Designet med bruk av <a href="https://gohugo.io/">Hugo</a>. Kodet av {{ .Site.Params.name }} i {{ now.Year }}
 </footer>
 {{ end }}
